TEST_PROGRAMS/VALID/05/if_stmt_elif_else_rob_brace.go
/* If statements */

package main

func main() {
	x := true
	y := true
	
	if z:= true; y {
		println(z)
	} else if z:= true; x {
		println(z)
	} else 
	{
		println(x)
	}
}
