TEST_PROGRAMS/INVALID/09/for_clause_errors.go
package for_errors

func main() {
    for i := 1; true; y := 1 {

    }
}
